--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
+# ==============================================================================
+# Local
+
+.DS_Store
+
+# ==============================================================================
+# Python
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
