--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ attrs>=20.3.0
 iniconfig==1.1.1
 numpy>=1.21.2
 packaging==21.0
-pandas==1.3.4
+pandas>=1.3.2
 pg8000==1.22.0
 pip-autoremove==0.10.0
 pluggy==1.0.0
